Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Introduction to the DOM Lab</title>
 </head>
 <body>
+  <h1>My HTML adventure</h1>
+
   <!--All our work for this lesson will go here-->
 </body>
 </html>
